<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/sign_up_bg"
	android:orientation="vertical">

	<androidx.appcompat.widget.Toolbar
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center_vertical|start"
			android:paddingHorizontal="15dp"
			android:text="@string/sign_up_sign_up"
			android:textColor="@color/white"
			android:textSize="24sp" />

	</androidx.appcompat.widget.Toolbar>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:fitsSystemWindows="true"
			android:orientation="vertical">

			<LinearLayout
				android:id="@+id/ll_sign_up_logo"
				android:layout_width="160dp"
				android:layout_height="wrap_content"
				android:layout_gravity="end"
				android:layout_marginVertical="15dp"
				android:background="@drawable/sign_up_information_right"
				android:gravity="center">

				<ImageView
					android:id="@+id/iv_sign_up_logo"
					android:layout_width="60dp"
					android:layout_height="60dp"
					android:layout_gravity="center_horizontal"
					android:src="@drawable/logo_blue" />

			</LinearLayout>

			<TextView
				android:id="@+id/tv_sign_up_information"
				android:layout_width="wrap_content"
				android:layout_height="25dp"
				android:layout_marginStart="25dp"
				android:gravity="center"
				android:text="@string/sign_up_basic_information"
				android:textColor="@color/sign_up_font"
				android:textSize="14sp" />

			<LinearLayout
				android:id="@+id/ll_sign_up_basic_information"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginEnd="30dp"
				android:layout_marginBottom="15dp"
				android:background="@drawable/sign_up_information_left"
				android:orientation="vertical"
				android:paddingHorizontal="25dp"
				android:paddingVertical="25dp">

				<com.google.android.material.textfield.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginVertical="6dp"
					android:orientation="vertical">

					<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/et_sign_up_nickname"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/sign_up_nickname"
						android:inputType="textPersonName" />

				</com.google.android.material.textfield.TextInputLayout>

				<com.google.android.material.textfield.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginVertical="6dp"
					android:orientation="vertical">

					<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/et_sign_up_email"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/sign_up_email"
						android:inputType="textEmailAddress" />

				</com.google.android.material.textfield.TextInputLayout>

				<com.google.android.material.textfield.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginVertical="6dp"
					android:orientation="vertical">

					<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/et_phone"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/sign_up_phone"
						android:inputType="phone" />

				</com.google.android.material.textfield.TextInputLayout>

			</LinearLayout>

			<TextView
				android:id="@+id/tv_sign_up_set_password"
				android:layout_width="wrap_content"
				android:layout_height="25dp"
				android:layout_marginStart="25dp"
				android:gravity="center"
				android:text="@string/sign_up_set_password"
				android:textColor="@color/sign_up_font"
				android:textSize="14sp" />

			<LinearLayout
				android:id="@+id/ll_sign_up_set_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginEnd="30dp"
				android:layout_marginBottom="15dp"
				android:background="@drawable/sign_up_information_left"
				android:orientation="vertical"
				android:paddingHorizontal="25dp"
				android:paddingVertical="25dp">

				<com.google.android.material.textfield.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginVertical="6dp"
					android:orientation="vertical">

					<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/et_sign_up_password"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/sign_up_password"
						android:inputType="textPassword" />

				</com.google.android.material.textfield.TextInputLayout>

				<com.google.android.material.textfield.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginVertical="6dp"
					android:orientation="vertical">

					<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/et_sign_up_confirm_password"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/sign_up_confirm_password"
						android:inputType="textPassword" />

				</com.google.android.material.textfield.TextInputLayout>

			</LinearLayout>

			<TextView
				android:id="@+id/tv_sign_up_goto_login"
				android:layout_width="wrap_content"
				android:layout_height="30dp"
				android:layout_gravity="end"
				android:layout_marginEnd="25dp"
				android:gravity="center"
				android:text="@string/sign_up_link_sign_in"
				android:textColor="@color/sign_up_font"
				android:textSize="14sp" />

			<LinearLayout
				android:id="@+id/ll_sign_up_reset_or_register"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="30dp"
				android:layout_marginBottom="30dp">

				<Button
					android:id="@+id/btn_sign_up_reset"
					android:layout_width="0dp"
					android:layout_height="60dp"
					android:layout_weight="1"
					android:background="@drawable/sign_up_button_reset"
					android:stateListAnimator="@null"
					android:text="@string/sign_up_reset"
					android:textColor="@color/sign_up_button_reset"
					android:textSize="20sp" />

				<Button
					android:id="@+id/btn_sign_up_register"
					android:layout_width="0dp"
					android:layout_height="60dp"
					android:layout_weight="1"
					android:background="@drawable/sign_up_button_register"
					android:stateListAnimator="@null"
					android:text="@string/sign_up_register"
					android:textColor="@color/white"
					android:textSize="20sp" />

			</LinearLayout>

		</LinearLayout>

	</ScrollView>

</LinearLayout>